testsuite/tests/rename/should_compile/T7672a.hs
module T7672a(Decl.T) where
import {-# SOURCE #-} qualified T7672 as Decl
