testsuite/tests/rename/should_fail/T23570b.hs
{-# OPTIONS_GHC -Wdodgy-imports #-}

module T23570b where

import T23570_aux (T(..))
